Morgan text fix: no "th" in dates
…. and n dashes not hyphens in dates because I am anal like that.

--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
                       </button>
                       <ul class="dropdown-menu" id="showdate-filter">
                         <!-- <li><a href="#" data-showdate="Jan 24-Feb 16, 2014">Jan 24-Feb 16, 2014</a></li> -->
-                        <li><a href="#" data-showdate="Jan 31-Feb 16, 2014">Jan 31-Feb 16, 2014</a></li>
-                        <li><a href="#" data-showdate="Feb 01-May 09, 2014">Feb 01-May 09, 2014</a></li>
-                        <li><a href="#" data-showdate="Mar 28-Apr 06, 2014">Mar 28-Apr 06, 2014</a></li>
-                        <li><a href="#" data-showdate="Apr 11-Apr 20, 2014">Apr 11-Apr 20, 2014</a></li>
-                        <li><a href="#" data-showdate="Apr 23-May 04, 2014">Apr 23-May 04, 2014</a></li>
-                        <li><a href="#" data-showdate="Apr 25-May 04, 2014">Apr 25-May 04, 2014</a></li>
+                        <li><a href="#" data-showdate="Jan 31-Feb 16, 2014">Jan 31&ndash;Feb 16, 2014</a></li>
+                        <li><a href="#" data-showdate="Feb 01-May 09, 2014">Feb 01&ndash;May 09, 2014</a></li>
+                        <li><a href="#" data-showdate="Mar 28-Apr 06, 2014">Mar 28&ndash;Apr 06, 2014</a></li>
+                        <li><a href="#" data-showdate="Apr 11-Apr 20, 2014">Apr 11&ndash;Apr 20, 2014</a></li>
+                        <li><a href="#" data-showdate="Apr 23-May 04, 2014">Apr 23&ndash;May 04, 2014</a></li>
+                        <li><a href="#" data-showdate="Apr 25-May 04, 2014">Apr 25&ndash;May 04, 2014</a></li>
                         <li><a href="criticalstudies.html">May 03, 2014</a></li>
                       </ul>
                     </div>
@@ -235,7 +235,7 @@
           <article id="intro">
             <div class="row">
               <div class="col-sm-12 col-md-10">
-                <p class="lead">The Graduate Exhibition Season 2014 presents work to the MICA community and the public from January 24 &ndash; May 4th and resumes June 26 &ndash; July 12. The season includes MFA, MA and post-baccalaureate exhibitions and critiques, gallery talks and presentations, public programs, a symposium, and student curated installations throughout the city.</p>
+                <p class="lead">The Graduate Exhibition Season 2014 presents work to the MICA community and the public from January 24 &ndash; May 4 and resumes June 26 &ndash; July 12. The season includes MFA, MA and post-baccalaureate exhibitions and critiques, gallery talks and presentations, public programs, a symposium, and student curated installations throughout the city.</p>
                 <p class="lead">The Graduate Exhibition Season showcases the achievements of MICA&rsquo;s graduate students&mdash;a diverse group of artists, designers, educators, scholars, and curators. It offers the campus community and the general public opportunities to engage with and contribute to the creative process at MICA.</p>
               </div>
             </div>
@@ -248,7 +248,7 @@
               <li class="row showtime" data-showdate="Jan 24-Feb 16, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jan 24</date>&ndash;<date>Feb 16, 2014</date></h3>
-                  <p class="small red">Reception: January 24, 5-7pm</p>
+                  <p class="small red">Reception: January 24, 5&ndash;7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Teaching MA</p>
@@ -258,7 +258,7 @@
               <li class="row showtime active" data-showdate="Jan 31-Feb 16, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>Jan 31</date>&ndash;<date>Feb 16, 2014</date></h3>
-                  <p class="small red">Reception: January 31, 5-7pm</p>
+                  <p class="small red">Reception: January 31, 5&ndash;7pm</p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Post-Baccalaureate Fine Art</p>
