More filter text correction

--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
               </div>
               <div  class="col-xs-12 col-sm-4 col-md-3">
                 <div id="galleries-data">
-                  <ul data-gallery="Pinkard,Bunting">
+                  <ul data-gallery="Pinkard">
                     <li><h4><span class="black">1&nbsp;</span> Bunting Center</h4></li>
                     <li><h5>Pinkard Gallery</h5></li>
                     <li><p>1305 W. Mt. Royal Ave. <br/>Baltimore, MD 21217</p></li>
