Change All Projects to All Students

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   </div><!-- /input-group -->
                 </li> <!-- Here's to hoping. -->
                 
-                <li><a href="#" class="sort-studentlist" data-type="all">All Projects</a></li>
+                <li><a href="#" class="sort-studentlist" data-type="all">All Students</a></li>
                 
                 <li>
                   <span>Program</span>
