Change All Projects to All Students

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                       </span>
                     </div><!-- /input-group -->
                   </li> <!-- Here's to hoping. -->
-                  <li><a href="#" class="sort-studentlist" data-type="all">All Projects</a></li>
+                  <li><a href="#" class="sort-studentlist" data-type="all">All Students</a></li>
                   <li>
                     <div class="btn-group dropup">
                       <button type="button" data-type="gallery" class="btn btn-default dropdown-toggle sort-studentlist" data-toggle="dropdown">
