gallery names in filters

--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                 <li>
                   <span>Gallery</span>
                   <ul class="" id="gallery-filter">
-                    <li><a href="#" data-gallery="D center">D Center Gallery</a></li>
-                    <li><a href="#" data-gallery="Decker">Decker Gallery</a></li>
-                    <li><a href="#" data-gallery="Fox">Fox 3 Gallery</a></li>
-                    <li><a href="#" data-gallery="Meyerhoff">Meyerhoff Gallery</a></li>
-                    <li><a href="#" data-gallery="Pinkard">Pinkard Gallery</a></li>
+                    <li><a href="#" data-gallery="D center">D Center</a></li>
+                    <li><a href="#" data-gallery="Decker">Decker</a></li>
+                    <li><a href="#" data-gallery="Fox">Fox 3</a></li>
+                    <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
+                    <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
                     <li><a href="#" data-gallery="Studio Center Galleries">Studio Center Galleries</a></li>
                     <li><a href="#" data-gallery="Off Campus">Off Campus</a></li>
                   </ul>
@@ -198,11 +198,11 @@
                         <a href="#">Gallery </a><span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" id="gallery-filter">
-                        <li><a href="#" data-gallery="D center">D Center Gallery</a></li>
-                        <li><a href="#" data-gallery="Decker">Decker Gallery</a></li>
-                        <li><a href="#" data-gallery="Fox">Fox 3 Gallery</a></li>
-                        <li><a href="#" data-gallery="Meyerhoff">Meyerhoff Gallery</a></li>
-                        <li><a href="#" data-gallery="Pinkard">Pinkard Gallery</a></li>
+                        <li><a href="#" data-gallery="D center">D Center</a></li>
+                        <li><a href="#" data-gallery="Decker">Decker</a></li>
+                        <li><a href="#" data-gallery="Fox">Fox 3</a></li>
+                        <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
+                        <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
                         <li><a href="#" data-gallery="Studio Center Galleries">Studio Center Galleries</a></li>
                         <li><a href="#" data-gallery="Off Campus">Off Campus</a></li>
                       </ul>
@@ -377,7 +377,7 @@
                     <li><p>1305 W. Mt. Royal Ave. <br/>Baltimore, MD 21217</p></li>
                     <li><p><a target="_blank" href="https://www.google.com/maps/place/Bunting+Building/@39.3080133,-76.621262,18z/data=!4m2!3m1!1s0x0:0x6541b717da384fd8">Get Directions</a></p></li>
                   </ul>
-                  <ul data-gallery="Fox 3,Decker,Meyerhoff">
+                  <ul data-gallery="Fox 3, Decker, Meyerhoff">
                     <li><h4><span class="black">2&nbsp;</span> Fox Building</h4></li>
                     <li><h5>Decker Gallery</h5></li>
                     <li><h5>Fox 3 Gallery</h5></li>
