--- a/index.html
+++ b/index.html
@@ -593,6 +593,17 @@
     <script src="js/hogan.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/mfathesis.js"></script>
+    
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-47445120-1', 'mica.edu');
+  ga('send', 'pageview');
+
+</script>
 
   </body>
 </html>
