--- a/index.html
+++ b/index.html
@@ -466,9 +466,9 @@
             <div class="col-xs-12 col-sm-4 col-md-3 student-info">
 
               <ul class="student-nav nav nav-pills nav-justified">
-                <li class="previous"><a href="/#id={{previd}}" class="overlay-nav-icon"></a></li>
+                <li class="previous"><a href="#id={{previd}}" class="overlay-nav-icon"></a></li>
                 <li class="random"><p class="overlay-nav-icon"></p></li>
-                <li class="next"><a href="/#id={{nextid}}" class="overlay-nav-icon"></a></li>
+                <li class="next"><a href="#id={{nextid}}" class="overlay-nav-icon"></a></li>
               </ul>
 
               <div>
