--- a/criticalstudies.html
+++ b/criticalstudies.html
@@ -62,7 +62,7 @@ P    X          F                K       J              F      J     Y      5   
                 <ul>
                   <li><p>At the <a href="https://www.google.com/maps/dir//Walters+Art+Museum,+600+N+Charles+St,+Baltimore,+MD+21201/@39.2965947,-76.6161201,17z/data=!4m13!1m4!3m3!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2sWalters+Art+Museum!3b1!4m7!1m0!1m5!1m1!1s0x89c80498448ab285:0xd5ddcac9d0faa540!2m2!1d-76.61612!2d39.296595" target="_blank">Walters Art Museum</a></p></li>
                   <li><date>May 3</date></li>
-                  <li><time>10&ndash;4:30pm</time></li>
+                  <li><time>10:30am&ndash;4:30pm</time></li>
                 </ul>
   
               </div>
@@ -85,7 +85,7 @@ P    X          F                K       J              F      J     Y      5   
                 </div>
   
                 
-                <div class="col-xs-9">
+                <div class="col-xs-7">
                   <h4>Critical Studies MA</h4>
                   <ul class="program-peers">
                     <li><p><b>Cheng Cao</b><br>
