--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                         <div class="inner">
                           <div class="info">
                             <h4 class="title">{{title}}</h4>
-                            <p class="year">{{year}}{{#medium}}, {{medium}}{{/medium}}{{#size}}, {{size}}{{/size}}</p>
+                            <p class="year">{{year}}{{#medium}}, {{.}}{{/medium}}{{#size}}, {{.}}{{/size}}</p>
                             <p class="credit">{{credit}}</p>
                           </div>
                         </div>
