--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
               {{/slideshowimages}}
 
               <article class="row">
-                <p class="col-xs-12 col-md-9 student-statement {{^slideshowimages}}lead{{/slideshowimages}}">{{{ websitelongstatementupto500words }}}</p>
+                <p class="col-xs-12 col-md-9 student-statement {{^slideshowimages}}lead{{/slideshowimages}}">{{{ statement }}}</p>
 
                 <div class="clearfix visible-sm"></div>
                 
