correct critical studies time

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
               <li class="row showtime" data-showdate="May 03, 2014">
                 <div class="col-sm-4 text-right">
                   <h3><date>May 03, 2014</date></h3>
-                  <p class="small red">Symposium: 5&ndash;7pm</a></p>
+                  <p class="small red">Symposium: 10:30am&ndash;4:30pm</a></p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead"><a href="criticalstudies.html">Critical Studies MA</a></p>
