--- a/criticalstudies.html
+++ b/criticalstudies.html
@@ -45,7 +45,7 @@
     <div class="student-overlay">
       <main class="container">
   
-        <button type="button" class="close"><a href="/">&times;</a></button> <!-- shit... need this to take you back to homepage... -->
+        <button type="button" class="close"><a href="http://graduate.mica.edu/gradshow/2014/">&times;</a></button> <!-- shit... need this to take you back to homepage... -->
   
         <div class="container">
           
@@ -119,7 +119,7 @@
           </div>
         </div>
         
-        <a href="/"><img class="logo" src="img/logo.png" /></a>
+        <a href="http://graduate.mica.edu/gradshow/2014/"><img class="logo" src="img/logo.png" /></a>
   
       </main>
     </div>
