--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <li>
                   <span>Program</span>
                   <ul class="" id="program-filter">
+                    <li><a href="#" data-program="Art Education MA">Art Education MA</a></li>
                     <li><a href="#" data-program="Community Arts MFA">Community Arts MFA</a></li>
                     <li><a href="criticalstudies.html">Critical Studies MA</a></li>
                     <li><a href="#" data-program="Curatorial Practice MFA">Curatorial Practice MFA</a></li>
@@ -94,7 +95,8 @@
                     <li><a href="#" data-program="Post-Baccalaureate Graphic Design">Post-Baccalaureate Graphic Design</a></li>
                     <li><a href="#" data-program="Rinehart School of Sculpture MFA">Rinehart School of Sculpture MFA</a></li>
                     <li><a href="#" data-program="Social Design MA">Social Design MA</a></li>
-                    <!-- <li><a href="#" data-program="Teaching MA">Teaching MA</a></li> -->
+                    <li><a href="#" data-program="Studio Art MFA">Studio Art MFA</a></li>
+                    <li><a href="#" data-program="Teaching MA">Teaching MA</a></li>
                   </ul>
                 </li>
                 <li>
@@ -112,7 +114,7 @@
                 <li>
                   <span>Show Date</span>
                   <ul class="" id="showdate-filter">
-                    <!-- <li><a href="#" data-showdate="Jan 24-Feb 16, 2014">Jan 24-Feb 16, 2014</a></li> -->
+                    <li><a href="#" data-showdate="Jan 24-Feb 16, 2014">Jan 24-Feb 16, 2014</a></li>
                     <li><a href="#" data-showdate="Jan 31-Feb 16, 2014">Jan 31-Feb 16, 2014</a></li>
                     <li><a href="#" data-showdate="Feb 01-May 09, 2014">Feb 01-May 09, 2014</a></li>
                     <li><a href="#" data-showdate="Mar 28-Apr 06, 2014">Mar 28-Apr 06, 2014</a></li>
@@ -120,6 +122,8 @@
                     <li><a href="#" data-showdate="Apr 23-May 04, 2014">Apr 23-May 04, 2014</a></li>
                     <li><a href="#" data-showdate="Apr 25-May 04, 2014">Apr 25-May 04, 2014</a></li>
                     <li><a href="criticalstudies.html">May 03, 2014</a></li>
+                    <li><a href="#" data-showdate="Jun 28-Jul 12, 2014">Jun 28-Jul 12, 2014</a></li>
+                    <li><a href="#" data-showdate="Jul 27-Aug 01, 2014">Jul 27-Aug 01, 2014</a></li>
                   </ul>
                 </li>
               </ul>
@@ -177,6 +181,7 @@
                         <a href="#">Program </a><span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" id="program-filter">
+                        <li><a href="#" data-program="Art Education MA">Art Education MA</a></li>
                         <li><a href="#" data-program="Community Arts MFA">Community Arts MFA</a></li>
                         <li><a href="criticalstudies.html">Critical Studies MA</a></li>
                         <li><a href="#" data-program="Curatorial Practice MFA">Curatorial Practice MFA</a></li>
@@ -184,12 +189,13 @@
                         <li><a href="#" data-program="Illustration Practice MFA">Illustration Practice MFA</a></li>
                         <li><a href="#" data-program="Leroy E. Hoffberger School of Painting MFA">Leroy E. Hoffberger School of Painting MFA</a></li>
                         <li><a href="#" data-program="Mount Royal School of Art MFA">Mount Royal School of Art MFA</a></li>
-                        <li><a href="#" data-program="Photographic & Electronic Media MFA">Photographic &amp; Electronic Media MFA</a></li>
+                        <li><a href="#" data-program="Photographic & Electronic Media MFA">Photographic & Electronic Media MFA</a></li>
                         <li><a href="#" data-program="Post-Baccalaureate Fine Art">Post-Baccalaureate Fine Arts</a></li>
                         <li><a href="#" data-program="Post-Baccalaureate Graphic Design">Post-Baccalaureate Graphic Design</a></li>
                         <li><a href="#" data-program="Rinehart School of Sculpture MFA">Rinehart School of Sculpture MFA</a></li>
                         <li><a href="#" data-program="Social Design MA">Social Design MA</a></li>
-                        <!-- <li><a href="#" data-program="Teaching MA">Teaching MA</a></li> -->
+                        <li><a href="#" data-program="Studio Art MFA">Studio Art MFA</a></li>
+                        <li><a href="#" data-program="Teaching MA">Teaching MA</a></li>
                       </ul>
                     </div>
                   </li>
@@ -215,14 +221,16 @@
                         <a href="#">Show Date </a><span class="caret"></span>
                       </button>
                       <ul class="dropdown-menu" id="showdate-filter">
-                        <!-- <li><a href="#" data-showdate="Jan 24-Feb 16, 2014">Jan 24-Feb 16, 2014</a></li> -->
-                        <li><a href="#" data-showdate="Jan 31-Feb 16, 2014">Jan 31&ndash;Feb 16, 2014</a></li>
-                        <li><a href="#" data-showdate="Feb 01-May 09, 2014">Feb 01&ndash;May 09, 2014</a></li>
-                        <li><a href="#" data-showdate="Mar 28-Apr 06, 2014">Mar 28&ndash;Apr 06, 2014</a></li>
-                        <li><a href="#" data-showdate="Apr 11-Apr 20, 2014">Apr 11&ndash;Apr 20, 2014</a></li>
-                        <li><a href="#" data-showdate="Apr 23-May 04, 2014">Apr 23&ndash;May 04, 2014</a></li>
-                        <li><a href="#" data-showdate="Apr 25-May 04, 2014">Apr 25&ndash;May 04, 2014</a></li>
+                        <li><a href="#" data-showdate="Jan 24-Feb 16, 2014">Jan 24-Feb 16, 2014</a></li>
+                        <li><a href="#" data-showdate="Jan 31-Feb 16, 2014">Jan 31-Feb 16, 2014</a></li>
+                        <li><a href="#" data-showdate="Feb 01-May 09, 2014">Feb 01-May 09, 2014</a></li>
+                        <li><a href="#" data-showdate="Mar 28-Apr 06, 2014">Mar 28-Apr 06, 2014</a></li>
+                        <li><a href="#" data-showdate="Apr 11-Apr 20, 2014">Apr 11-Apr 20, 2014</a></li>
+                        <li><a href="#" data-showdate="Apr 23-May 04, 2014">Apr 23-May 04, 2014</a></li>
+                        <li><a href="#" data-showdate="Apr 25-May 04, 2014">Apr 25-May 04, 2014</a></li>
                         <li><a href="criticalstudies.html">May 03, 2014</a></li>
+                        <li><a href="#" data-showdate="Jun 28-Jul 12, 2014">Jun 28-Jul 12, 2014</a></li>
+                        <li><a href="#" data-showdate="Jul 27-Aug 01, 2014">Jul 27-Aug 01, 2014</a></li>
                       </ul>
                     </div>
                   </li>
