try this for a better url to get at the images

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                   <div class="carousel-inner">
                     {{#slideshow}}
                     <div class="item">
-                      <img src="http://mfa.cape.io/{{slide}}">
+                      <img src="http://mfa.cape.io/img/slides/{{studentid}}/{{slide}}">
 
                       {{#caption}}
                       <div class="carousel-caption">
@@ -543,7 +543,7 @@
                 {{^slideshowsingle}}
                 {{#slideshow}}
                 <div id="singleimg">
-                  <img src="http://mfa.cape.io/{{slide}}">
+                  <img src="http://mfa.cape.io/img/slides/{{studentid}}/{{slide}}">
                   {{#caption}}
                   <div class="carousel-caption">
                     <div class="inner">
