trying to add PDF download link

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 </li>
               </ul>
             </li>
+            <li><a href="pdf/MICA_GRADSHOW_catalogueweb_2014.pdf">Gallery Catalog <span class="glyphicon glyphicon-file"></span></a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -235,6 +236,8 @@
                     </div>
                   </li>
                 </ul>
+              </li>
+              <li><a href="pdf/MICA_GRADSHOW_catalogueweb_2014.pdf">Gallery Catalog <span class="glyphicon glyphicon-file"></span></a></li>
             </ul>
           </nav>
         </div>
