catalog PDF text instead

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <li><a href="#intro">Welcome</a></li>
             <li><a href="#schedule">Schedule</a></li>
             <li><a href="#galleries">Galleries</a></li>
-            <li><a href="pdf/MICA_GRADSHOW_catalogueweb_2014.pdf">Gallery Catalog <span class="glyphicon glyphicon-file"></span></a></li>
+            <li><a href="pdf/MICA_GRADSHOW_catalogueweb_2014.pdf">Catalog PDF <span class="glyphicon glyphicon-file"></span><span class="glyphicon glyphicon-download"></span></a></li>
 
             <li>
               <a href="#students">Students</a>
@@ -165,7 +165,7 @@
               <li><a href="#intro">Welcome</a></li>
               <li><a href="#schedule">Schedule</a></li>
               <li><a href="#galleries">Galleries</a></li>
-              <li><a href="pdf/MICA_GRADSHOW_catalogueweb_2014.pdf">Gallery Catalog <span class="glyphicon glyphicon-file"></span></a></li>
+              <li><a href="pdf/MICA_GRADSHOW_catalogueweb_2014.pdf">Catalog PDF <span class="glyphicon glyphicon-file"></span><span class="glyphicon glyphicon-download"></span></a></li>
               <li><a href="#students">Students</a>
                 <ul> <!-- this submenu only shows up when in students area -->
                   <li>
