program no escape

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                     <img src="img/thumbnails/{{studentid}}.jpg" /> <!-- decent start to thumbnails -->
                     <div class="info">
                       <h4 class="name">{{firstname}} {{lastname}}</h4>
-                      <p class="program">{{program}}</p>
+                      <p class="program">{{&program}}</p>
                       <p class="exhibitionlocation">{{exhibitionlocation}}</p>
                       <p class="show-date showdate">{{showdate}}</p>
                       <p class="id" style="display:none">{{studentid}}</p>
