better download placement

--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
             <li><a href="#intro">Welcome</a></li>
             <li><a href="#schedule">Schedule</a></li>
             <li><a href="#galleries">Galleries</a></li>
-            <li><a href="pdf/MICA_GRADSHOW_catalogueweb_2014.pdf">Catalog PDF <span class="glyphicon glyphicon-file"></span><span class="glyphicon glyphicon-download"></span></a></li>
 
             <li>
               <a href="#students">Students</a>
@@ -127,6 +126,7 @@
                     <li><a href="#" data-showdate="Jul 27-Aug 01, 2014">Jul 27-Aug 01, 2014</a></li>
                   </ul>
                 </li>
+                <li><a href="pdf/MICA_GRADSHOW_catalogueweb_2014.pdf">Catalog PDF <span class="glyphicon glyphicon-download"></span></a></li>
               </ul>
             </li>
           </ul>
@@ -165,7 +165,6 @@
               <li><a href="#intro">Welcome</a></li>
               <li><a href="#schedule">Schedule</a></li>
               <li><a href="#galleries">Galleries</a></li>
-              <li><a href="pdf/MICA_GRADSHOW_catalogueweb_2014.pdf">Catalog PDF <span class="glyphicon glyphicon-file"></span><span class="glyphicon glyphicon-download"></span></a></li>
               <li><a href="#students">Students</a>
                 <ul> <!-- this submenu only shows up when in students area -->
                   <li>
@@ -236,6 +235,7 @@
                       </ul>
                     </div>
                   </li>
+                  <li><a href="pdf/MICA_GRADSHOW_catalogueweb_2014.pdf">Catalog PDF <span class="glyphicon glyphicon-download"></span></a></li>
                 </ul>
               </li>
             </ul>
